[BUGFIX] Remove vertical scrollbar

--- a/scss/modules/_base.scss
+++ b/scss/modules/_base.scss
@@ -4,6 +4,7 @@ body {
   color: $color-black;
   font-family: $font-family;
   font-size: $font-size;
+  overflow: hidden;
   overflow-y: scroll;
 }
 
